# wd-calibration

./: .gitignore  .gitmodules  MANIFEST.in  README.md  axelrod.ipynb  des-locus.ipynb  des-ps1.ipynb  generate_locus.ipynb  model-based-correlations.ipynb  model-cov.ipynb  ps1-des-ri.ipynb  ps1-des.ipynb  ps1_r-des_ri.ipynb  pyproject.toml  setup.cfg  skymaps.ipynb  total_least_squares.ipynb  variance-validation.ipynb
axelrod_tables/: decam.tex  lco.tex  new_ps.tex  ps.tex
calibration/: __main__.py  _datalab.py  calamida_lco.py  catwise.py  const.py  des.py  errors.py  gaia.py  kepler_tess.py  least_squares.py  legacy_survey.py  ps1.py  scaler_to_torch.py  syn_flux.py  syn_mag.py  units.py  util.py  yse.py  ztf.py
calibration/color_transformation/: apply.py  model_filename.py  train.py
calibration/data/: WDphot_ILAPHv5_abmag.tex  __init__.py  atmosphere_model.py  calamida_lco.py  calamida_lco_table2.tex  data.py  ipac_coord.tbl  narayan_etal2019.py  passband.py  spectrum.py
calibration/position_correlation/: train.py
locus/: locus_DES.csv  locus_Gaia.csv  locus_PS1.csv
models/phot-transformation/: DES_g-PS1_g--r--i--z--y.json  DES_g-PS1_g--r--i--z--y.onnx  DES_i-PS1_g--r--i--z--y.json  DES_i-PS1_g--r--i--z--y.onnx  DES_r-PS1_g--r--i--z--y.json  DES_r-PS1_g--r--i--z--y.onnx  DES_y-PS1_g--r--i--z--y.json  DES_y-PS1_g--r--i--z--y.onnx  DES_z-PS1_g--r--i--z--y.json  (+23 more)
results/: catwise2020.csv  catwise2020_from_ipac.tbl  gaiaedr3.csv
scripts/: apply-photo-transformation.sh  compose-stars-table.sh  compose_stars_table.py  train-photo-transformation.sh
(+46 files in other folders)
