[metadata]
name = calibration
description = Descriptive description
long_description = file: README.md

[options]
packages = find:
include_package_data = True
install_requires =
    astropy
    astroquery
    h5py
    lightkurve
    numpy
    pyvo
    requests

[options.entry_points]
console_scripts =
    download-filters = calibration.data.filters.download:download_filters
