[metadata]
name = calibration
description = Descriptive description
long_description = file: README.md

[options]
packages = find:
include_package_data = True
install_requires =
    astropy
    astroquery
    tensorflow-probability[jax]
    h5py
    lightkurve
    numpy
    pyvo
    requests
    pyarrow
    pytorch-lightning

[options.entry_points]
console_scripts =
    download-filters = calibration.data.filters.download:download_filters
    train-photo-transform = calibration.color_transformation.train:main
    apply-photo-transform = calibration.color_transformation.apply:main